--- a/style.css
+++ b/style.css
@@ -58,3 +58,26 @@ main {
 #header {
 	padding: 1.5rem;
 }
+
+.btn {
+	padding: 0.5rem 2rem;
+	border: 1px #ccc solid;
+	display: inline-block;
+	margin: 2rem 0 0;
+	border-radius: 50px;
+	text-decoration: none;
+	color: black;
+	transition: background 500ms ease;
+}
+
+.btn:hover {
+	background: #f4f4f4;
+}
+
+#botonCharlas {
+	display: flex;
+	flex: 0 1 40vw;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
