--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ body {
 
 #Text {
 	padding: 1.5rem;
-	text-align: center;
+	text-align: justify;
+	text-align-last: center;
 }
 
 img {
@@ -60,21 +61,29 @@ main {
 }
 
 .btn {
-	padding: 0.5rem 2rem;
-	border: 1px #ccc solid;
 	display: inline-block;
-	margin: 2rem 0 0;
-	border-radius: 50px;
+	padding: 0.35em 1.2em;
+	border: 0.1em solid #000000;
+	margin: 0 0.3em 0.3em 0;
+	border-radius: 0.12em;
+	box-sizing: border-box;
 	text-decoration: none;
-	color: black;
-	transition: background 500ms ease;
+	font-weight: 400;
+	color: #000000;
+	text-align: center;
+	transition: all 0.2s;
 }
 
 .btn:hover {
-	background: #f4f4f4;
+	color: #FFFFFF;
+	background-color: #000000;
 }
 
 #botonCharlas {
+	margin-top: 0rem;
+	margin-bottom: 1rem;
+	margin-right: 4rem;
+	margin-left: 4rem;
 	display: flex;
 	flex: 0 1 40vw;
 	justify-content: center;
